<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/gray"
    android:orientation="horizontal"
    android:padding="10dp">

        <TextView
            android:id="@+id/state_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingHorizontal="5dp"
            android:layout_weight="0.9"
            android:gravity="center"
            tools:text="Andaman and Nicobar"
            android:textColor="@color/teal_500"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="0.4"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/active"
                android:textSize="13sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cured"
                android:textSize="13sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/death"
                android:textSize="13sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:orientation="vertical">

            <TextView
                android:id="@+id/active_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="00000"
                android:textColor="@color/purple_500"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/cured_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="00000"
                android:textColor="@color/green_700"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/death_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="00000"
                android:textColor="@color/red_500"
                android:textSize="13sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:orientation="vertical">

            <TextView
                android:id="@+id/day_active"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="↑00000"
                android:textColor="@color/purple_500"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/day_cured"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="↑00000"
                android:textColor="@color/green_700"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/day_death"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="↑00000"
                android:textColor="@color/red_500"
                android:textSize="13sp" />

        </LinearLayout>

    </LinearLayout>